Closed Bug 1731517 Opened 3 years ago Closed 3 years ago

java.lang.OutOfMemoryError in GeckoViewStreamListener::WriteSegment

Categories

(GeckoView :: General, defect)

Unspecified
Android
defect

Tracking

(firefox94 fixed)

RESOLVED FIXED
94 Branch
Tracking Status
firefox94 --- fixed

People

(Reporter: m_kato, Assigned: m_kato)

Details

Crash Data

Attachments

(2 files)

bp-735ed0e9-36b1-4fd8-a567-f3de60210920 etc are Java's OOM crash by GeckoViewStreamListener::WriteSegment. I think that it is better to return error instead of crash since nsIInputStream::ReadSegment can handle error.

It is better to return error instead of crash since
nsIInputStream::ReadSegment can handle error.

Depends on D126058

Pushed by m_kato@ga2.so-net.ne.jp:
https://hg.mozilla.org/integration/autoland/rev/e019762cfb59
Add fallible version of primitive type array allocation. r=geckoview-reviewers,agi
https://hg.mozilla.org/integration/autoland/rev/f07b92ba8c9c
GeckoViewStreamListener::WriteSegment returns error instead of crash by java.lang.OutOfMemoryError. r=geckoview-reviewers,agi
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 94 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: