Bug 1731517 - Add fallible version of primitive type array allocation. r=geckoview-reviewers,agi

If current exception is `OutOfMemoryError`, return null. Others, GV will be
crashed even if fallible allocation.

Differential Revision: https://phabricator.services.mozilla.com/D126058